--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -17,6 +18,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "live-server": "^1.2.0",
     "node-sass": "^4.9.0",
     "normalize.css": "7.0.0",
@@ -26,7 +29,6 @@
     "style-loader": "0.18.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "webpack-dev-server": "2.5.1"
   },
   "devDependencies": {
