--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
+    "sass-loader": "^7.0.1",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0",
@@ -38,6 +38,6 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
-    "sass-loader": "^7.0.1"
+    "webpack-dev-server": "2.5.1"
   }
 }
