--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "sass-loader": "^7.0.1",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0",
